[package]
authors = ["muh"]
name = "ezsplit"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/beHoeppy/EzSplit-ESO"
publish = false

[dependencies]
chrono = "0.4.31"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html